--- a/app/javascript/stylesheets/1-global_var_func_mix/global_variables.scss
+++ b/app/javascript/stylesheets/1-global_var_func_mix/global_variables.scss
@@ -5,3 +5,5 @@ $roma_white: rgb(255, 255, 255);
 $roma_orang: rgb(212, 149, 90);
 $roma_yello: rgb(243, 228, 89);
 $roma_grey: rgb(49, 49, 49);
+
+// FONT VARIABLES
