--- a/app/javascript/stylesheets/3-pages/roma.scss
+++ b/app/javascript/stylesheets/3-pages/roma.scss
@@ -1,3 +1,7 @@
 html {
-  background-color: black;
+  background-color: white;
+  font-family: "Muli", sans-serif;
+  font-weight: 300;
+  font-size: 25px;
+  text-rendering: optimizeLegibility;
 }
