--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -6,6 +6,7 @@
 @import "stylesheets/2-component_styles/navbar";
 @import "stylesheets/2-component_styles/header";
 // // 3 - Pages
+@import "stylesheets/3-pages/section_one";
 @import "stylesheets/3-pages/roma";
 
 // External
