--- a/app/javascript/stylesheets/2-component_styles/header.scss
+++ b/app/javascript/stylesheets/2-component_styles/header.scss
@@ -1,11 +1,38 @@
-header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
-    url("../images/tank.png");
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+.roma-hero {
+  color: $roma_white !important;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+h1 {
+  @include h1_mix;
+  text-transform: uppercase !important;
+  font-size: 35px !important;
+  letter-spacing: 1px;
+  margin-bottom: 10px;
+  margin: 5px;
+}
+
+.btn:link,
+.btn:visited {
+  display: inline-block;
+  padding: 10px 30px;
+  margin: 5px;
+  font-size: 80%;
+  text-transform: uppercase;
+  font-weight: 300;
+  text-decoration: none;
+  border-radius: 200px;
+  border: 1px solid white;
+  color: white;
+  transition: background-color 0.2s, border 0.2s, color 0.2s;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: white;
+  color: black !important;
+  border: 1px solid black;
 }
