Roma - Commit 15 - Restructured React Components and Refactored JSX

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,11 @@
   </head>
 
   <body>
-  <div id="root"></div>
+  <section id="secone">
+  </section>
+  <section id="sectwo">
+  </section>
+
     <%= yield %>
   </body>
 </html>
