Roma - Commit 21 - Media Query Tests - 1.3

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -11,7 +11,7 @@
 @import "stylesheets/3-pages/roma";
 
 // 4 - Media Queries
-@import "stylesheets/4-media_queries/media_queries.scss";
+@import "stylesheets/4-media_queries/media_queries";
 
 // External
 @import "bootstrap/scss/bootstrap";
