Roma - Commit 23 - Media Query Tests - 1.5

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -5,6 +5,7 @@
 // 2 - component_styles
 @import "stylesheets/2-component_styles/navbar";
 @import "stylesheets/2-component_styles/header";
+@import "stylesheets/2-component_styles/services";
 
 // 3 - Pages
 @import "stylesheets/3-pages/section_one";
