--- a/app/javascript/stylesheets/4-media_queries/media_queries.scss
+++ b/app/javascript/stylesheets/4-media_queries/media_queries.scss
@@ -9,16 +9,82 @@
 @media (min-width: 768px) and (max-width: 1024px) {
 }
 
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+@media (min-width: 768px) and (max-width: 1023px) and (orientation: landscape) {
+  #wht_nav_logo {
+    height: 70px;
+    margin-left: 15px;
+  }
+
+  a {
+    @include a_mix;
+    font-size: 15px;
+    margin-right: 15px;
+  }
+
+  h1 {
+    font-size: 20px !important;
+  }
+
+  .btn:link,
+  .btn:visited {
+    display: inline-block;
+    padding: 7px 20px;
+    margin: 2.5px;
+    font-size: 60%;
+    text-transform: uppercase;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 200px;
+    border: 1px solid white;
+    color: white;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
+  }
+
+  .btn:hover,
+  .btn:active {
+    background-color: white;
+    color: black !important;
+    border: 1px solid black;
+  }
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
-}
+  #wht_nav_logo {
+    height: 80px;
+    margin-left: 15px;
+  }
 
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
-}
+  a {
+    @include a_mix;
+    font-size: 16px;
+    margin-right: 15px;
+  }
 
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape) {
+  h1 {
+    font-size: 16px !important;
+  }
+
+  .btn:link,
+  .btn:visited {
+    display: inline-block;
+    padding: 7px 20px;
+    margin: 2.5px;
+    font-size: 60%;
+    text-transform: uppercase;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 200px;
+    border: 1px solid white;
+    color: white;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
+  }
+
+  .btn:hover,
+  .btn:active {
+    background-color: white;
+    color: black !important;
+    border: 1px solid black;
+  }
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
