--- a/app/javascript/stylesheets/1-global_var_func_mix/global_mixins.scss
+++ b/app/javascript/stylesheets/1-global_var_func_mix/global_mixins.scss
@@ -32,5 +32,5 @@
 @mixin font_mix {
   font-family: "Muli", sans-serif !important;
   font-weight: 300 !important;
-  font-size: 18px !important;
+  // font-size: 18px !important;
 }
