--- a/app/javascript/stylesheets/4-media_queries/media_queries.scss
+++ b/app/javascript/stylesheets/4-media_queries/media_queries.scss
@@ -1,93 +1,93 @@
-// Additional Queries
+// // Additional Queries
 
-@media (min-width: 1281px) {
-}
+// @media (min-width: 1281px) {
+// }
 
-@media (min-width: 1025px) and (max-width: 1280px) {
-}
+// @media (min-width: 1025px) and (max-width: 1280px) {
+// }
 
-@media (min-width: 768px) and (max-width: 1024px) {
-}
+// @media (min-width: 768px) and (max-width: 1024px) {
+// }
 
-@media (min-width: 768px) and (max-width: 1023px) and (orientation: landscape) {
-  #wht_nav_logo {
-    height: 70px;
-    margin-left: 15px;
-  }
+// @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+//   #wht_nav_logo {
+//     height: 70px;
+//     margin-left: 15px;
+//   }
 
-  a {
-    @include a_mix;
-    font-size: 15px;
-    margin-right: 15px;
-  }
+//   a {
+//     @include a_mix;
+//     font-size: 15px;
+//     margin-right: 15px;
+//   }
 
-  h1 {
-    font-size: 20px !important;
-  }
+//   h1 {
+//     font-size: 20px !important;
+//   }
 
-  .btn:link,
-  .btn:visited {
-    display: inline-block;
-    padding: 7px 20px;
-    margin: 2.5px;
-    font-size: 60%;
-    text-transform: uppercase;
-    font-weight: 300;
-    text-decoration: none;
-    border-radius: 200px;
-    border: 1px solid white;
-    color: white;
-    transition: background-color 0.2s, border 0.2s, color 0.2s;
-  }
+//   .btn:link,
+//   .btn:visited {
+//     display: inline-block;
+//     padding: 7px 20px;
+//     margin: 2.5px;
+//     font-size: 60%;
+//     text-transform: uppercase;
+//     font-weight: 300;
+//     text-decoration: none;
+//     border-radius: 200px;
+//     border: 1px solid white;
+//     color: white;
+//     transition: background-color 0.2s, border 0.2s, color 0.2s;
+//   }
 
-  .btn:hover,
-  .btn:active {
-    background-color: white;
-    color: black !important;
-    border: 1px solid black;
-  }
-}
+//   .btn:hover,
+//   .btn:active {
+//     background-color: white;
+//     color: black !important;
+//     border: 1px solid black;
+//   }
+// }
 
-@media (min-width: 481px) and (max-width: 767px) {
-  #wht_nav_logo {
-    height: 80px;
-    margin-left: 15px;
-  }
+// @media (min-width: 481px) and (max-width: 767px) and (orientation: landscape) {
+//   #wht_nav_logo {
+//     height: 80px;
+//     margin-left: 15px;
+//   }
 
-  a {
-    @include a_mix;
-    font-size: 16px;
-    margin-right: 15px;
-  }
+//   a {
+//     @include a_mix;
+//     font-size: 16px;
+//     margin-right: 15px;
+//   }
 
-  h1 {
-    font-size: 16px !important;
-  }
+//   h1 {
+//     font-size: 16px !important;
+//   }
 
-  .btn:link,
-  .btn:visited {
-    display: inline-block;
-    padding: 7px 20px;
-    margin: 2.5px;
-    font-size: 60%;
-    text-transform: uppercase;
-    font-weight: 300;
-    text-decoration: none;
-    border-radius: 200px;
-    border: 1px solid white;
-    color: white;
-    transition: background-color 0.2s, border 0.2s, color 0.2s;
-  }
+//   .btn:link,
+//   .btn:visited {
+//     display: inline-block;
+//     padding: 7px 20px;
+//     margin: 2.5px;
+//     font-size: 60%;
+//     text-transform: uppercase;
+//     font-weight: 300;
+//     text-decoration: none;
+//     border-radius: 200px;
+//     border: 1px solid white;
+//     color: white;
+//     transition: background-color 0.2s, border 0.2s, color 0.2s;
+//   }
 
-  .btn:hover,
-  .btn:active {
-    background-color: white;
-    color: black !important;
-    border: 1px solid black;
-  }
-}
+//   .btn:hover,
+//   .btn:active {
+//     background-color: white;
+//     color: black !important;
+//     border: 1px solid black;
+//   }
+// }
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media (max-width: 480px) {
   .section-one {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
       url("../images/tank_phone.png");
