--- a/app/javascript/stylesheets/4-media_queries/media_queries.scss
+++ b/app/javascript/stylesheets/4-media_queries/media_queries.scss
@@ -87,53 +87,117 @@
 //   }
 // }
 
-@media (max-width: 480px) {
-  .section-one {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
-      url("../images/tank_phone.png");
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-  }
+// @media (max-width: 480px) {
+//   .section-one {
+//     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
+//       url("../images/tank_phone.png");
+//     background-size: cover;
+//     background-position: center;
+//     height: 100vh;
+//     background-attachment: fixed;
+//     -webkit-background-size: cover;
+//     -moz-background-size: cover;
+//     -o-background-size: cover;
+//   }
 
-  #wht_nav_logo {
-    height: 80px;
-    margin-left: 15px;
-  }
+//   #wht_nav_logo {
+//     height: 80px;
+//     margin-left: 15px;
+//   }
 
-  a {
-    @include a_mix;
-    font-size: 16px;
-    margin-right: 15px;
-  }
+//   a {
+//     @include a_mix;
+//     font-size: 16px;
+//     margin-right: 15px;
+//   }
 
-  h1 {
-    font-size: 16px !important;
-  }
+//   h1 {
+//     font-size: 16px !important;
+//   }
 
-  .btn:link,
-  .btn:visited {
-    display: inline-block;
-    padding: 7px 20px;
-    margin: 2.5px;
-    font-size: 60%;
-    text-transform: uppercase;
-    font-weight: 300;
-    text-decoration: none;
-    border-radius: 200px;
-    border: 1px solid white;
-    color: white;
-    transition: background-color 0.2s, border 0.2s, color 0.2s;
-  }
+//   .btn:link,
+//   .btn:visited {
+//     display: inline-block;
+//     padding: 7px 20px;
+//     margin: 2.5px;
+//     font-size: 60%;
+//     text-transform: uppercase;
+//     font-weight: 300;
+//     text-decoration: none;
+//     border-radius: 200px;
+//     border: 1px solid white;
+//     color: white;
+//     transition: background-color 0.2s, border 0.2s, color 0.2s;
+//   }
 
-  .btn:hover,
-  .btn:active {
-    background-color: white;
-    color: black !important;
-    border: 1px solid black;
-  }
-}
+//   .btn:hover,
+//   .btn:active {
+//     background-color: white;
+//     color: black !important;
+//     border: 1px solid black;
+//   }
+// }
+
+// Small devices (landscape phones, 576px and up)
+// @media (max-width: 576px) {
+//   .section-one {
+//     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
+//       url("../images/tank_phone.png");
+//     background-size: cover;
+//     background-position: center;
+//     height: 100vh;
+//     background-attachment: fixed;
+//     -webkit-background-size: cover;
+//     -moz-background-size: cover;
+//     -o-background-size: cover;
+//   }
+
+//   #wht_nav_logo {
+//     height: 80px;
+//     margin-left: 15px;
+//   }
+
+//   a {
+//     @include a_mix;
+//     font-size: 16px;
+//     margin-right: 15px;
+//   }
+
+//   h1 {
+//     font-size: 16px !important;
+//   }
+
+//   .btn:link,
+//   .btn:visited {
+//     display: inline-block;
+//     padding: 7px 20px;
+//     margin: 2.5px;
+//     font-size: 60%;
+//     text-transform: uppercase;
+//     font-weight: 300;
+//     text-decoration: none;
+//     border-radius: 200px;
+//     border: 1px solid white;
+//     color: white;
+//     transition: background-color 0.2s, border 0.2s, color 0.2s;
+//   }
+
+//   .btn:hover,
+//   .btn:active {
+//     background-color: white;
+//     color: black !important;
+//     border: 1px solid black;
+//   }
+// }
+
+// // Medium devices (tablets, 768px and up)
+// @media (min-width: 768px) {
+// }
+
+// // Large devices (desktops, 992px and up)
+// @media (min-width: 992px) {
+// }
+
+// // Extra large devices (large desktops, 1200px and up)
+// @media (min-width: 1200px) {
+// }
