--- a/app/javascript/stylesheets/4-media_queries/media_queries.scss
+++ b/app/javascript/stylesheets/4-media_queries/media_queries.scss
@@ -1,203 +1,130 @@
-// // Additional Queries
+// Extra small devices (portrait phones, less than 576px)
+@media screen and (orientation: portrait) and (max-width: 567px) {
+  #wht_nav_logo {
+    height: 70px;
+    margin-left: 15px;
+  }
 
-// @media (min-width: 1281px) {
-// }
+  a {
+    @include a_mix;
+    font-size: 85%;
+    margin-right: 15px;
+  }
 
-// @media (min-width: 1025px) and (max-width: 1280px) {
-// }
+  .section-one {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
+      url("../images/tank_phone.png") !important;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+  }
 
-// @media (min-width: 768px) and (max-width: 1024px) {
-// }
+  h1 {
+    font-size: 16px !important;
+  }
 
-// @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-//   #wht_nav_logo {
-//     height: 70px;
-//     margin-left: 15px;
-//   }
-
-//   a {
-//     @include a_mix;
-//     font-size: 15px;
-//     margin-right: 15px;
-//   }
-
-//   h1 {
-//     font-size: 20px !important;
-//   }
-
-//   .btn:link,
-//   .btn:visited {
-//     display: inline-block;
-//     padding: 7px 20px;
-//     margin: 2.5px;
-//     font-size: 60%;
-//     text-transform: uppercase;
-//     font-weight: 300;
-//     text-decoration: none;
-//     border-radius: 200px;
-//     border: 1px solid white;
-//     color: white;
-//     transition: background-color 0.2s, border 0.2s, color 0.2s;
-//   }
-
-//   .btn:hover,
-//   .btn:active {
-//     background-color: white;
-//     color: black !important;
-//     border: 1px solid black;
-//   }
-// }
-
-// @media (min-width: 481px) and (max-width: 767px) and (orientation: landscape) {
-//   #wht_nav_logo {
-//     height: 80px;
-//     margin-left: 15px;
-//   }
-
-//   a {
-//     @include a_mix;
-//     font-size: 16px;
-//     margin-right: 15px;
-//   }
-
-//   h1 {
-//     font-size: 16px !important;
-//   }
-
-//   .btn:link,
-//   .btn:visited {
-//     display: inline-block;
-//     padding: 7px 20px;
-//     margin: 2.5px;
-//     font-size: 60%;
-//     text-transform: uppercase;
-//     font-weight: 300;
-//     text-decoration: none;
-//     border-radius: 200px;
-//     border: 1px solid white;
-//     color: white;
-//     transition: background-color 0.2s, border 0.2s, color 0.2s;
-//   }
-
-//   .btn:hover,
-//   .btn:active {
-//     background-color: white;
-//     color: black !important;
-//     border: 1px solid black;
-//   }
-// }
-
-// @media (max-width: 480px) {
-//   .section-one {
-//     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
-//       url("../images/tank_phone.png");
-//     background-size: cover;
-//     background-position: center;
-//     height: 100vh;
-//     background-attachment: fixed;
-//     -webkit-background-size: cover;
-//     -moz-background-size: cover;
-//     -o-background-size: cover;
-//   }
-
-//   #wht_nav_logo {
-//     height: 80px;
-//     margin-left: 15px;
-//   }
-
-//   a {
-//     @include a_mix;
-//     font-size: 16px;
-//     margin-right: 15px;
-//   }
-
-//   h1 {
-//     font-size: 16px !important;
-//   }
-
-//   .btn:link,
-//   .btn:visited {
-//     display: inline-block;
-//     padding: 7px 20px;
-//     margin: 2.5px;
-//     font-size: 60%;
-//     text-transform: uppercase;
-//     font-weight: 300;
-//     text-decoration: none;
-//     border-radius: 200px;
-//     border: 1px solid white;
-//     color: white;
-//     transition: background-color 0.2s, border 0.2s, color 0.2s;
-//   }
-
-//   .btn:hover,
-//   .btn:active {
-//     background-color: white;
-//     color: black !important;
-//     border: 1px solid black;
-//   }
-// }
+  .btn:link,
+  .btn:visited {
+    display: inline-block;
+    padding: 7px 20px;
+    margin: 2.5px;
+    font-size: 70%;
+    text-transform: uppercase;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 200px;
+    border: 1px solid white;
+    color: white;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
+  }
+}
 
 // Small devices (landscape phones, 576px and up)
-// @media (max-width: 576px) {
-//   .section-one {
-//     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
-//       url("../images/tank_phone.png");
-//     background-size: cover;
-//     background-position: center;
-//     height: 100vh;
-//     background-attachment: fixed;
-//     -webkit-background-size: cover;
-//     -moz-background-size: cover;
-//     -o-background-size: cover;
-//   }
+@media screen and (orientation: landscape) and (min-width: 568px) and (max-width: 767.98px) {
+  #wht_nav_logo {
+    height: 70px;
+    margin-left: 15px;
+  }
 
-//   #wht_nav_logo {
-//     height: 80px;
-//     margin-left: 15px;
-//   }
+  a {
+    @include a_mix;
+    font-size: 85%;
+    margin-right: 15px;
+  }
 
-//   a {
-//     @include a_mix;
-//     font-size: 16px;
-//     margin-right: 15px;
-//   }
+  .section-one {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
+      url("../images/tank.png") !important;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+  }
 
-//   h1 {
-//     font-size: 16px !important;
-//   }
+  h1 {
+    font-size: 16px !important;
+  }
 
-//   .btn:link,
-//   .btn:visited {
-//     display: inline-block;
-//     padding: 7px 20px;
-//     margin: 2.5px;
-//     font-size: 60%;
-//     text-transform: uppercase;
-//     font-weight: 300;
-//     text-decoration: none;
-//     border-radius: 200px;
-//     border: 1px solid white;
-//     color: white;
-//     transition: background-color 0.2s, border 0.2s, color 0.2s;
-//   }
+  .btn:link,
+  .btn:visited {
+    display: inline-block;
+    padding: 7px 20px;
+    margin: 2.5px;
+    font-size: 70%;
+    text-transform: uppercase;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 200px;
+    border: 1px solid white;
+    color: white;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
+  }
+}
 
-//   .btn:hover,
-//   .btn:active {
-//     background-color: white;
-//     color: black !important;
-//     border: 1px solid black;
-//   }
-// }
+// Medium devices (tablets, 768px and up)
+@media screen and (orientation: landscape) and (min-width: 768px) and (max-width: 991.98px) {
+  #wht_nav_logo {
+    height: 80px;
+    margin-left: 15px;
+  }
 
-// // Medium devices (tablets, 768px and up)
-// @media (min-width: 768px) {
-// }
+  a {
+    @include a_mix;
+    font-size: 90%;
+    margin-right: 15px;
+  }
 
-// // Large devices (desktops, 992px and up)
-// @media (min-width: 992px) {
-// }
+  h1 {
+    font-size: 20px !important;
+  }
 
-// // Extra large devices (large desktops, 1200px and up)
-// @media (min-width: 1200px) {
-// }
+  .btn:link,
+  .btn:visited {
+    display: inline-block;
+    padding: 7px 20px;
+    margin: 2.5px;
+    font-size: 85%;
+    text-transform: uppercase;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 200px;
+    border: 1px solid white;
+    color: white;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) and (max-width: 1199.98px) {
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+}
