Roma - Global Commit 32 - BG-Image Media Query Trouble Shoot 1.1

--- a/app/javascript/stylesheets/4-media_queries/media_queries.scss
+++ b/app/javascript/stylesheets/4-media_queries/media_queries.scss
@@ -11,17 +11,17 @@
     margin-right: 15px;
   }
 
-  //   .section-one {
-  //     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
-  //       url("../images/tank_phone.png") !important;
-  //     background-size: cover;
-  //     background-position: center;
-  //     height: 100vh;
-  //     background-attachment: fixed;
-  //     -webkit-background-size: cover;
-  //     -moz-background-size: cover;
-  //     -o-background-size: cover;
-  //   }
+  .section-one {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
+      url("../images/tank_phone.png") !important;
+    //   background-size: cover;
+    //   background-position: center;
+    //   height: 100vh;
+    //   background-attachment: fixed;
+    //   -webkit-background-size: cover;
+    //   -moz-background-size: cover;
+    //   -o-background-size: cover;
+  }
 
   h1 {
     font-size: 16px !important;
