--- a/app/javascript/stylesheets/4-media_queries/media_queries.scss
+++ b/app/javascript/stylesheets/4-media_queries/media_queries.scss
@@ -1,5 +1,5 @@
 // Extra small devices (portrait phones, less than 576px)
-@media screen and (orientation: portrait) and (max-width: 567px) {
+@media (max-width: 480px) {
   #wht_nav_logo {
     height: 70px;
     margin-left: 15px;
@@ -44,7 +44,7 @@
 }
 
 // Small devices (landscape phones, 576px and up)
-@media screen and (orientation: landscape) and (min-width: 568px) and (max-width: 767.98px) {
+@media (min-width: 481px) and (max-width: 1024px) {
   #wht_nav_logo {
     height: 70px;
     margin-left: 15px;
@@ -89,36 +89,36 @@
 }
 
 // Medium devices (tablets, 768px and up)
-@media screen and (orientation: landscape) and (min-width: 768px) and (max-width: 991.98px) {
-  #wht_nav_logo {
-    height: 80px;
-    margin-left: 15px;
-  }
+@media (min-width: 1025px) {
+  //   #wht_nav_logo {
+  //     height: 80px;
+  //     margin-left: 15px;
+  //   }
 
-  a {
-    @include a_mix;
-    font-size: 90%;
-    margin-right: 15px;
-  }
+  //   a {
+  //     @include a_mix;
+  //     font-size: 90%;
+  //     margin-right: 15px;
+  //   }
 
-  h1 {
-    font-size: 20px !important;
-  }
+  //   h1 {
+  //     font-size: 20px !important;
+  //   }
 
-  .btn:link,
-  .btn:visited {
-    display: inline-block;
-    padding: 7px 20px;
-    margin: 2.5px;
-    font-size: 85%;
-    text-transform: uppercase;
-    font-weight: 300;
-    text-decoration: none;
-    border-radius: 200px;
-    border: 1px solid white;
-    color: white;
-    transition: background-color 0.2s, border 0.2s, color 0.2s;
-  }
+  //   .btn:link,
+  //   .btn:visited {
+  //     display: inline-block;
+  //     padding: 7px 20px;
+  //     margin: 2.5px;
+  //     font-size: 85%;
+  //     text-transform: uppercase;
+  //     font-weight: 300;
+  //     text-decoration: none;
+  //     border-radius: 200px;
+  //     border: 1px solid white;
+  //     color: white;
+  //     transition: background-color 0.2s, border 0.2s, color 0.2s;
+  //   }
 }
 
 // Large devices (desktops, 992px and up)
