--- a/app/javascript/stylesheets/3-pages/section_one.scss
+++ b/app/javascript/stylesheets/3-pages/section_one.scss
@@ -6,7 +6,7 @@
   background-attachment: fixed;
   background-size: cover;
   height: 100vh;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // -o-background-size: cover;
 }
