--- a/app/javascript/stylesheets/3-pages/section_one.scss
+++ b/app/javascript/stylesheets/3-pages/section_one.scss
@@ -1,12 +1,12 @@
 .section-one {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
-    url("../images/tank.png");
+    url("../images/tank_phone.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   height: 100vh;
-  // -webkit-background-size: cover;
-  // -moz-background-size: cover;
-  // -o-background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
 }
