--- a/app/javascript/stylesheets/3-pages/section_one.scss
+++ b/app/javascript/stylesheets/3-pages/section_one.scss
@@ -1,10 +1,15 @@
-.section-one {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
+.container-fluid {
+  padding: 0 !important;
+}
+
+.tank {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
     url("../images/tank.png");
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  height: 100vh;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
