--- a/app/javascript/stylesheets/3-pages/section_one.scss
+++ b/app/javascript/stylesheets/3-pages/section_one.scss
@@ -1,13 +1,12 @@
-.container-fluid {
-  padding: 0 !important;
-}
+// .container-fluid {
+//   height: 100vh;
+// }
 
-.tank {
+.section-one {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
     url("../images/tank.png");
   background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
+  background-position: fixed;
   background-repeat: no-repeat;
   height: 100vh;
   -webkit-background-size: cover;
