--- a/app/javascript/stylesheets/4-media_queries/media_queries.scss
+++ b/app/javascript/stylesheets/4-media_queries/media_queries.scss
@@ -102,17 +102,15 @@
     margin-right: 15px;
   }
 
-  //   .section-one {
-  //     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
-  //       url("../images/tank_phone.png") !important;
-  //     background-attachment: fixed;
-  //     background-position: center;
-  //     background-repeat: no-repeat;
-  //     background-size: cover;
-  //     -webkit-background-size: cover;
-  //     -moz-background-size: cover;
-  //     -o-background-size: cover;
-  //   }
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
+    url("../images/tank_phone.png");
+  background-size: cover;
+  background-position: fixed;
+  background-repeat: no-repeat;
+  height: 100vh;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
 
   h1 {
     font-size: 16px !important;
