--- a/app/javascript/stylesheets/4-media_queries/media_queries.scss
+++ b/app/javascript/stylesheets/4-media_queries/media_queries.scss
@@ -102,15 +102,17 @@
     margin-right: 15px;
   }
 
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
-    url("../images/tank_phone.png");
-  background-size: cover;
-  background-position: fixed;
-  background-repeat: no-repeat;
-  height: 100vh;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  .section-one {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
+      url("../images/tank_phone.png");
+    background-size: cover;
+    background-position: fixed;
+    background-repeat: no-repeat;
+    height: 100vh;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+  }
 
   h1 {
     font-size: 16px !important;
