Roma - Global Commit 46 - Adjusting Media Query for Orientation

--- a/app/javascript/stylesheets/3-pages/section_one.scss
+++ b/app/javascript/stylesheets/3-pages/section_one.scss
@@ -5,6 +5,7 @@
 .section-one {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
     url("../images/tank.png");
+  background-attachment: fixed;
   background-size: cover;
   background-position: fixed;
   background-repeat: no-repeat;
