--- a/app/javascript/stylesheets/4-media_queries/media_queries.scss
+++ b/app/javascript/stylesheets/4-media_queries/media_queries.scss
@@ -90,7 +90,7 @@
 // // }
 
 // Extra small devices (portrait phones, less than 576px)
-@media (max-width: 575.98px) {
+@media (max-width: 575.98px) and (orientation: portrait) {
   #wht_nav_logo {
     height: 70px;
     margin-left: 15px;
@@ -98,7 +98,7 @@
 
   a {
     @include a_mix;
-    font-size: 85%;
+    font-size: 95%;
     margin-right: 15px;
   }
 
@@ -115,7 +115,7 @@
   }
 
   h1 {
-    font-size: 16px !important;
+    font-size: 18px !important;
   }
 
   .btn:link,
@@ -123,7 +123,7 @@
     display: inline-block;
     padding: 7px 20px;
     margin: 2.5px;
-    font-size: 70%;
+    font-size: 75%;
     text-transform: uppercase;
     font-weight: 300;
     text-decoration: none;
