--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -6,13 +6,16 @@
 @import "stylesheets/2-component_styles/navbar";
 @import "stylesheets/2-component_styles/header";
 
-// 3 - Pages
-@import "stylesheets/3-pages/section_one";
-@import "stylesheets/3-pages/section_two";
-@import "stylesheets/3-pages/roma";
+// 3 - Sections
+@import "stylesheets/3-sections/section_one";
+@import "stylesheets/3-sections/section_two";
+
+// 4 - Pages
+@import "stylesheets/4-pages/roma";
 
 // 4 - Media Queries
-@import "stylesheets/4-media_queries/media_queries";
+@import "stylesheets/5-media_queries/portrait_media_queries";
+@import "stylesheets/5-media_queries/landscape_media_queries";
 
 // External
 @import "bootstrap/scss/bootstrap";
