Roma - Global Commit 56 - Added React Auto Scroll and re-named Queries to Accomodate

--- a/app/javascript/stylesheets/1-global_var_func_mix/global_mixins.scss
+++ b/app/javascript/stylesheets/1-global_var_func_mix/global_mixins.scss
@@ -22,7 +22,7 @@
   list-style: none;
 }
 
-@mixin a_mix {
+@mixin react_link_mix {
   color: white !important;
   text-transform: uppercase !important;
 }
