Roma - Global Commit 59 - Styled Hero Tag, and Added Aditional Media Queries For New Auto Scrolling Hero Button

--- a/app/javascript/stylesheets/2-component_styles/header.scss
+++ b/app/javascript/stylesheets/2-component_styles/header.scss
@@ -4,34 +4,50 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  margin-left: 25px !important;
 }
 
 h1 {
   @include h1_mix;
   text-transform: uppercase !important;
   font-size: 35px !important;
-  letter-spacing: 1px;
-  margin-bottom: 10px;
-  margin: 5px;
+  letter-spacing: 2px;
+  margin-bottom: 18px !important;
 }
 
-.btn:link,
-.btn:visited {
-  display: inline-block;
-  padding: 10px 30px;
-  margin: 5px;
-  font-size: 80%;
-  text-transform: uppercase;
-  font-weight: 300;
-  text-decoration: none;
-  border-radius: 200px;
-  border: 1px solid white;
-  color: white;
-  transition: background-color 0.2s, border 0.2s, color 0.2s;
+// .btn-secondary:link,
+// .btn-secondary:visited {
+//   display: inline-block;
+//   padding: 10px 30px;
+//   margin: 5px;
+//   font-size: 80%;
+//   text-transform: uppercase;
+//   font-weight: 300;
+//   text-decoration: none;
+//   border-radius: 200px;
+//   border: 1px solid white;
+//   color: white;
+//   transition: background-color 0.2s, border 0.2s, color 0.2s;
+// }
+
+// .btn-secondary:hover,
+// .btn-secondary:active {
+//   background-color: white;
+//   color: black !important;
+//   border: 1px solid black;
+// }
+
+.quote {
+  @include font_mix;
+  font-size: 120% !important;
+  background-color: transparent;
+  border: 1px solid white !important;
+  padding: 10px 30px !important;
+  border-radius: 200px !important;
 }
 
-.btn:hover,
-.btn:active {
+.quote:hover,
+.quote:active {
   background-color: white;
   color: black !important;
   border: 1px solid black;
