--- a/app/javascript/stylesheets/5-media_queries/landscape_media_queries.scss
+++ b/app/javascript/stylesheets/5-media_queries/landscape_media_queries.scss
@@ -8,27 +8,24 @@
 
   .react-link {
     @include react_link_mix;
-    font-size: 95%;
+    font-size: 90%;
     margin-right: 15px;
   }
 
-  h1 {
-    font-size: 16px !important;
+  .roma-hero {
+    margin-left: 12px !important;
+    top: 65%;
   }
 
-  .btn:link,
-  .btn:visited {
-    display: inline-block;
-    padding: 7px 20px;
-    margin: 2.5px;
-    font-size: 70%;
-    text-transform: uppercase;
-    font-weight: 300;
-    text-decoration: none;
-    border-radius: 200px;
-    border: 1px solid white;
-    color: white;
-    transition: background-color 0.2s, border 0.2s, color 0.2s;
+  h1 {
+    font-size: 18px !important;
+    letter-spacing: 1px;
+    margin-bottom: 15px !important;
+  }
+
+  .quote {
+    font-size: 100% !important;
+    padding: 5px 15px !important;
   }
 }
 
@@ -42,27 +39,24 @@
 
   .react-link {
     @include react_link_mix;
-    font-size: 95%;
+    font-size: 90%;
     margin-right: 15px;
   }
 
-  h1 {
-    font-size: 17px !important;
+  .roma-hero {
+    margin-left: 12px !important;
+    top: 65%;
   }
 
-  .btn:link,
-  .btn:visited {
-    display: inline-block;
-    padding: 7px 20px;
-    margin: 2.5px;
-    font-size: 70%;
-    text-transform: uppercase;
-    font-weight: 300;
-    text-decoration: none;
-    border-radius: 200px;
-    border: 1px solid white;
-    color: white;
-    transition: background-color 0.2s, border 0.2s, color 0.2s;
+  h1 {
+    font-size: 20px !important;
+    letter-spacing: 1px;
+    margin-bottom: 15px !important;
+  }
+
+  .quote {
+    font-size: 100% !important;
+    padding: 7px 17px !important;
   }
 }
 
@@ -80,23 +74,20 @@
     margin-right: 15px;
   }
 
-  h1 {
-    font-size: 18px !important;
+  .roma-hero {
+    margin-left: 12px !important;
+    top: 65%;
   }
 
-  .btn:link,
-  .btn:visited {
-    display: inline-block;
-    padding: 7px 20px;
-    margin: 2.5px;
-    font-size: 70%;
-    text-transform: uppercase;
-    font-weight: 300;
-    text-decoration: none;
-    border-radius: 200px;
-    border: 1px solid white;
-    color: white;
-    transition: background-color 0.2s, border 0.2s, color 0.2s;
+  h1 {
+    font-size: 20px !important;
+    letter-spacing: 1px;
+    margin-bottom: 15px !important;
+  }
+
+  .quote {
+    font-size: 100% !important;
+    padding: 7px 17px !important;
   }
 }
 
@@ -114,23 +105,20 @@
     margin-right: 15px;
   }
 
-  h1 {
-    font-size: 21px !important;
+  .roma-hero {
+    margin-left: 12px !important;
+    top: 65%;
   }
 
-  .btn:link,
-  .btn:visited {
-    display: inline-block;
-    padding: 7px 20px;
-    margin: 2.5px;
-    font-size: 80%;
-    text-transform: uppercase;
-    font-weight: 300;
-    text-decoration: none;
-    border-radius: 200px;
-    border: 1px solid white;
-    color: white;
-    transition: background-color 0.2s, border 0.2s, color 0.2s;
+  h1 {
+    font-size: 20px !important;
+    letter-spacing: 1px;
+    margin-bottom: 15px !important;
+  }
+
+  .quote {
+    font-size: 100% !important;
+    padding: 7px 17px !important;
   }
 }
 
