Roma - Global Commit 60 - Additional Hero Tag Styling And Query Adjustments

--- a/app/javascript/stylesheets/5-media_queries/landscape_media_queries.scss
+++ b/app/javascript/stylesheets/5-media_queries/landscape_media_queries.scss
@@ -14,7 +14,7 @@
 
   .roma-hero {
     margin-left: 12px !important;
-    top: 65%;
+    top: 67%;
   }
 
   h1 {
@@ -136,5 +136,14 @@
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+  }
+  .roma-hero {
+    margin-left: 12px !important;
+    top: 62%;
+  }
+
+  .quote {
+    font-size: 100% !important;
+    padding: 10px 25px !important;
   }
 }
