Roma - Global Commit 61 - Added Section Three Scss, Component, and Tags Through React and Html

--- a/app/javascript/stylesheets/3-sections/section_three.scss
+++ b/app/javascript/stylesheets/3-sections/section_three.scss
@@ -1,4 +1,4 @@
-.section-one {
+.section-three {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
     url("../images/tank/tank.png");
   background-size: cover;
