--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -9,6 +9,7 @@
 // 3 - Sections
 @import "stylesheets/3-sections/section_one";
 @import "stylesheets/3-sections/section_two";
+@import "stylesheets/3-sections/section_three";
 
 // 4 - Pages
 @import "stylesheets/4-pages/roma";
