--- a/app/javascript/stylesheets/3-sections/semi_break.scss
+++ b/app/javascript/stylesheets/3-sections/semi_break.scss
@@ -1,10 +1,10 @@
-.section-three {
+#semi-break {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
-    url("../images/tank/tank.png");
+    url("../images/semi/semi.png");
   background-size: cover;
   background-position: fixed;
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 165px;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
