--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
   </section>
   <section id="sectwo">
   </section>
+  <section id="semi-break">
+  </section>
   <section id="secthree">
   </section>
 
