Roma - Global Commit 62 - Pre Gallery Add

--- a/app/javascript/stylesheets/3-sections/semi_break.scss
+++ b/app/javascript/stylesheets/3-sections/semi_break.scss
@@ -4,7 +4,7 @@
   background-size: cover;
   background-position: fixed;
   background-repeat: no-repeat;
-  height: 165px;
+  height: 50vh;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
