--- a/app/javascript/stylesheets/3-sections/section_one.scss
+++ b/app/javascript/stylesheets/3-sections/section_one.scss
@@ -1,4 +1,4 @@
-.section-one {
+#tank_blast {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
     url("../images/tank/tank.png");
   background-size: cover;
